# crabioware-gba

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: build-and-test.yml
crabioware/: Cargo.toml
crabioware/.cargo/: config.toml
crabioware/assets/games/: common.aseprite
crabioware/assets/games/snake/: sprites.aseprite
crabioware/crates/crabioware-core/: Cargo.toml
crabioware/crates/crabioware-core/assets/: common.aseprite
crabioware/crates/crabioware-core/src/: lib.rs  types.rs
crabioware/crates/crabioware-core/src/ecs/: builder.rs  core.rs  view.rs  world.rs
crabioware/crates/crabioware-core/src/games/: game.rs  game_loader.rs  game_state.rs  games.rs  mod.rs  runnable_game.rs  states.rs
crabioware/crates/crabioware-core/src/graphics/: mod.rs  resources.rs
crabioware/crates/crabioware-core/src/physics/: mod.rs
crabioware/crates/crabioware-core/src/screens/: gameover.rs  graphics.rs  mod.rs  pause.rs  start.rs  victory.rs
crabioware/crates/games/artillery/: Cargo.toml
crabioware/crates/games/artillery/assets/: sprites.aseprite
crabioware/crates/games/paccrab/: Cargo.toml  build.rs
crabioware/crates/games/paccrab/assets/: sprites.aseprite  tilemap.json  tilemap.tsx  tiles.aseprite
crabioware/crates/games/paccrab/assets/maps/: level-1.json  level-1.tmx
crabioware/crates/games/paccrab/src/: components.rs  graphics.rs  levels.rs  lib.rs  paccrab.rs
crabioware/crates/games/pong/: Cargo.toml
crabioware/crates/games/pong/assets/: numbers.aseprite  sprites.aseprite
crabioware/crates/games/pong/src/: components.rs  graphics.rs  lib.rs  pong.rs
crabioware/crates/games/snake/: Cargo.toml
crabioware/crates/games/snake/assets/: sprites.aseprite
crabioware/crates/games/snake/src/: components.rs  graphics.rs  lib.rs  snake.rs
crabioware/crates/metagame/: Cargo.toml
crabioware/crates/metagame/src/: game_picker.rs  graphics.rs  lib.rs  metagame.rs  resources.rs
crabioware/crates/metagame/src/metagames/: game_picker.rs  mod.rs
crabioware/src/: lib.rs  registry.rs  types.rs
crabioware/src/ecs/: filter.rs  mod.rs  view.rs  world.rs
crabioware/src/games/: difficulty.rs  game.rs  mod.rs  registry.rs  states.rs
crabioware/src/games/common/: gameover.rs  graphics.rs  mod.rs  pause.rs  start.rs  victory.rs
crabioware/src/games/pong/: components.rs  graphics.rs  mod.rs  pong.rs
crabioware/src/games/snake/: components.rs  graphics.rs  mod.rs  snake.rs
crabioware/src/physics/: intersect.rs
docs/: resources.md  todo.md
tools/: build  shell
