[workspace]
members = [
    "crates/crabioware-core",
    "crates/games/*",
]

[workspace.dependencies]
agb = "^0.18.0"

[workspace.package]
version = "0.1.0"
authors = [""]
edition = "2021"

[package]
name = "crabioware"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
agb = { workspace = true }
crabioware-core = { path = "crates/crabioware-core" }
crabioware-pong = { path = "crates/games/pong" }
crabioware-snake = { path = "crates/games/snake" }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
codegen-units = 1
