[package]
name = "crabioware-paccrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { workspace = true }
crabioware-core = { path = "../../crabioware-core/" } 

[build-dependencies]
itertools = "0.12.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
